fix overflow

--- a/styles/static-css/modals.css
+++ b/styles/static-css/modals.css
@@ -126,7 +126,7 @@
   border: 2px solid #000;
   box-shadow: 24;
   padding: 0 1rem 1rem 1rem;
-  overflow: auto;
+  overflow: auto !important;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -139,7 +139,7 @@
   padding: 0;
   width: 100%;
   margin-top: 15px;
-  /* height: 100%; */
+  height: 100% !important;
 }
 .mod_user_inputgroup {
   width: 100%;
